@@ -100,6 +100,9 @@ class MyTypePlugin(object):
     def post_pull_hook(self, archive, product):
         assert product.mynamespace2.counter == 28
 
+    def post_remove_hook(self, archive, product):
+        assert product.mynamespace2.counter == 28
+
 
 _plugin = MyTypePlugin()
 
